--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "inherits": "^2.0.1",
     "layout-bmfont-text": "^1.2.0",
+    "xtend": "^4.0.0",
     "quad-indices": "^1.0.0"
   },
   "devDependencies": {
@@ -23,8 +24,7 @@
     "three": "^0.70.0",
     "three-orbit-viewer": "^69.2.9",
     "uglify-js": "^2.4.17",
-    "watchify": "^2.4.0",
-    "xtend": "^4.0.0"
+    "watchify": "^2.4.0"
   },
   "scripts": {
     "build": "browserify test/test-3d.js | uglifyjs -cm > test/bundle.js",
