--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
     "url": "https://github.com/mattdesl"
   },
   "standard": {
-    "globals": [ "THREE" ]
+    "globals": [
+      "THREE"
+    ]
   },
   "dependencies": {
     "inherits": "^2.0.1",
     "layout-bmfont-text": "^1.2.0",
+    "object-assign": "^4.0.1",
     "quad-indices": "^2.0.1",
-    "xtend": "^4.0.0"
+    "three-buffer-vertex-data": "^1.0.0"
   },
   "devDependencies": {
     "bluebird": "^2.9.14",
-    "browserify": "^9.0.3",
-    "budo": "^1.2.2",
-    "garnish": "^2.1.0",
+    "browserify": "^12.0.1",
+    "budo": "^7.0.2",
     "load-bmfont": "^1.0.0",
     "three": "^0.70.0",
     "three-orbit-viewer": "^69.2.9",
-    "uglify-js": "^2.4.17",
-    "watchify": "^2.4.0"
+    "uglify-js": "^2.4.17"
   },
   "scripts": {
     "build": "browserify test/test-3d.js | uglifyjs -cm > test/bundle.js",
-    "test-2d": "budo test/test-2d.js -o bundle.js --dir test --live -d | garnish -v",
-    "test-3d": "budo test/test-3d.js -o bundle.js --dir test --live -d | garnish -v",
-    "test-multi": "budo test/test-multi.js -o bundle.js --dir test --live -d | garnish -v"
+    "start": "budo test/test-line.js:bundle.js --dir test --live",
+    "test-2d": "budo test/test-2d.js:bundle.js --dir test --live",
+    "test-3d": "budo test/test-3d.js:bundle.js --dir test --live",
+    "test-multi": "budo test/test-multi.js:bundle.js --dir test --live"
   },
   "keywords": [
     "bmfont",
