--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browserify": "^12.0.1",
     "budo": "^7.0.2",
     "load-bmfont": "^1.0.0",
+    "standard": "^5.4.1",
     "three": "^0.70.0",
     "three-orbit-viewer": "^69.2.9",
     "uglify-js": "^2.4.17"
@@ -35,7 +36,8 @@
     "start": "budo test/test-line.js:bundle.js --dir test --live",
     "test-2d": "budo test/test-2d.js:bundle.js --dir test --live",
     "test-3d": "budo test/test-3d.js:bundle.js --dir test --live",
-    "test-multi": "budo test/test-multi.js:bundle.js --dir test --live"
+    "test-multi": "budo test/test-multi.js:bundle.js --dir test --live",
+    "test": "standard"
   },
   "keywords": [
     "bmfont",
