--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
     "bluebird": "^2.9.14",
     "browserify": "^12.0.1",
     "budo": "^7.0.2",
+    "glsl-aastep": "^1.0.1",
+    "glsl-hsl2rgb": "^1.1.0",
+    "glsl-noise": "0.0.0",
+    "glslify": "^4.0.0",
     "load-bmfont": "^1.0.0",
     "standard": "^5.4.1",
+    "sun-tzu-quotes": "^1.0.0",
     "three": "^0.70.0",
     "three-orbit-viewer": "^69.2.9",
+    "three-vignette-background": "^1.0.2",
     "uglify-js": "^2.4.17"
   },
   "scripts": {
-    "build": "browserify test/test-3d.js | uglifyjs -cm > test/bundle.js",
-    "start": "budo test/test-line.js:bundle.js --dir test --live",
+    "build": "browserify test/test-shader.js -t glslify | uglifyjs -cm > test/bundle.js",
+    "start": "budo test/test-shader.js:bundle.js --dir test --live -- -t glslify",
     "test-2d": "budo test/test-2d.js:bundle.js --dir test --live",
     "test-3d": "budo test/test-3d.js:bundle.js --dir test --live",
     "test-multi": "budo test/test-multi.js:bundle.js --dir test --live",
