--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test-2d": "budo test/test-2d.js:bundle.js --dir test --live",
     "test-3d": "budo test/test-3d.js:bundle.js --dir test --live",
     "test-multi": "budo test/test-multi.js:bundle.js --dir test --live",
+    "test-msdf": "budo test/test-msdf.js:bundle.js --dir test --live",
     "test": "standard"
   },
   "keywords": [
