random colors and text for the msdf test

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     ]
   },
   "dependencies": {
+    "array-shuffle": "^1.0.1",
     "inherits": "^2.0.1",
     "layout-bmfont-text": "^1.2.0",
+    "nice-color-palettes": "^1.0.1",
     "object-assign": "^4.0.1",
     "quad-indices": "^2.0.1",
     "three-buffer-vertex-data": "^1.0.0"
